# aiec1-chess-tutor

./: .env.example  .gitignore  CONTEXT.md  Makefile  PRD.md  README.md  TDD.md  docker-compose.test.yml  docker-compose.yml  render.yaml
docs/: rubric-gap-analysis.md
docs/adr/: 0001-library-licensing.md  0002-three-service-topology.md
evals/: retrieval_ragas.py  testset.jsonl
evals/planted_mistakes/: run.py
evals/planted_mistakes/games/: game_01.pgn  game_02.pgn  game_03.pgn  game_04.pgn  game_05.pgn  game_06.pgn  game_07.pgn  game_08.pgn  game_09.pgn  game_10.pgn  game_11.pgn  game_12.pgn  game_13.pgn  game_14.pgn  game_15.pgn  game_16.pgn  game_17.pgn  game_18.pgn  game_19.pgn  game_20.pgn
evals/results/: retrieval_baseline_20260715_202609.md  retrieval_ensemble_20260715_203041.md
graphs/: task1_user_workflow.dot  task2_agent_workflow.dot  task2_infrastructure.dot
scripts/: fetch_lichess_games.py  ingest_library.py
src/backend/: Dockerfile  langgraph.json  pyproject.toml
src/backend/app/: __init__.py  engine_client.py  lessons.py  prompts.py  retrieval.py  schemas.py  tools.py
src/backend/app/graphs/: chat.py  distillation.py
src/backend/tests/: conftest.py
src/backend/tests/integration/: test_distillation_graph.py
src/backend/tests/unit/: test_lessons.py  test_moment_selector.py  test_pgn_parser.py
src/chess-engine-server/: Dockerfile  main.py  pyproject.toml
src/chess-engine-server/engine/: maia.py  stockfish.py
src/chess-engine-server/tests/: conftest.py
src/chess-engine-server/tests/integration/: test_endpoints.py
src/chess-engine-server/tests/unit/: test_engine.py
src/frontend/: Dockerfile  next.config.ts  package.json  tailwind.config.ts
src/frontend/app/: layout.tsx  page.tsx
src/frontend/components/: BoardPanel.tsx  Chat.tsx  Header.tsx  TakeawayList.tsx  (+1 more)
(+21 files in other folders)
