[project]
name = "chess-tutor-backend"
version = "0.1.0"
description = "LangGraph agent — distillation + chat graphs for Blunderstanding"
requires-python = ">=3.13"
dependencies = [
    "langgraph>=1.0.10",
    "langgraph-cli[inmem]>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-qdrant>=0.2.0",
    "langchain-tavily>=0.1.0",
    "qdrant-client>=1.12.0",
    "python-chess>=1.999",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "tiktoken>=0.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "langchain-core>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
